# asl-teaching-website

./: .gitignore  README.md  RM-trouble.md  docker-compose.yml
backend/: .env  app.py
backend/api/: detection.py  lessons.py
backend/express/: Dockerfile  package.json
backend/express/src/: server.ts
backend/express/src/routes/storage/: upload.ts
backend/python/: Dockerfile  pyproject.toml  requirements.txt
backend/python/scripts/: dev.py
backend/python/src/: main.py  storacha_client.py
backend/python/src/api/: detection.py
backend/python/src/api/routes/: health.py  storage.py
backend/python/src/core/: config.py
backend/python/src/services/storage/: akave.py  akave_storage.py  base.py  storage_provider.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx
frontend/src/components/: HandDetection.jsx  LessonCard.jsx
frontend/src/pages/: Contribute.tsx  Home.jsx  Lessons.jsx  Practice.jsx
frontend/src/services/: api.js
frontend/src/services/api/: base.ts  storage.ts  types.ts
