[tool.poetry]
name = "asl-teaching-backend"
version = "0.1.0"
description = "ASL Teaching Website Backend"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "scripts" }
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
python-multipart = "^0.0.6"
httpx = "^0.25.1"
pydantic = "^2.5.1"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.1"
aiohttp = "^3.11.14"
pytest-asyncio = "^0.25.3"
pytest-aiohttp = "^1.1.0"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"
rembg = "^2.0.60"
mediapipe = "^0.10.9"
tensorflow = "^2.15.0"
pillow = "^10.2.0"
scikit-image = "^0.22.0"
web3-storage = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"

[tool.poetry.scripts]
dev = "scripts.dev:main"
akave = "scripts.docker_manager:main"
start = "uvicorn src.main:app"
test = "pytest:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
